# src/routes/memoria.routes.ts
@@ -6,6 +6,7 @@ import {
 	getMemoriaById,
 	getMemoriasByMonth,
 	patchMemoria,
+	reorderMemorias,
 } from "../controllers/memoria.controller";
 import { authenticateRequest } from "../middlewares/auth.middleware";
 
@@ -13,6 +14,7 @@ export const memoriaRouter: Router = Router();
 
 memoriaRouter.post("/memorias", authenticateRequest, createMemoria);
 memoriaRouter.get("/memorias", authenticateRequest, getMemoriasByMonth);
+memoriaRouter.patch("/memorias/reorder", authenticateRequest, reorderMemorias);
 memoriaRouter.get("/memorias/:id", authenticateRequest, getMemoriaById);
 memoriaRouter.patch("/memorias/:id", authenticateRequest, patchMemoria);
 memoriaRouter.delete("/memorias/:id", authenticateRequest, deleteMemoria);
